kubernetes/apps/development/grid-reliance/app/dashboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grid-reliance-dashboard
  namespace: development
  labels:
    app.kubernetes.io/name: grid-reliance
    app.kubernetes.io/component: dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8501
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: grid-reliance
    app.kubernetes.io/component: dashboard
